fix zoom on input on mobile phone

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header nav h2 {
 input{
     width: 100%;
     padding: 10px 5px;
+    font-size: 16px;
 }
 .calculate-btn{
     grid-column-start: 1;
